--- a/setting/dev.env
+++ b/setting/dev.env
@@ -2,7 +2,7 @@
 redis_host=localhost
 redis_port=6379
 [SERVER]
-server_host=localhost
+server_host=0.0.0.0
 server_port=8001
 [DB]
 db_host=localhost
