db dockerfile 추가

--- a/setting/dev.env
+++ b/setting/dev.env
@@ -1,5 +1,5 @@
 [REDIS]
-redis_host=10.10.27.1191
+redis_host=10.10.27.119
 redis_port=6379
 [SERVER]
 server_host=0.0.0.0
@@ -8,5 +8,5 @@ server_port=8001
 db_host=localhost
 db_port=3306
 db_user=root
-db_passwd=
+db_passwd=0000
 db_database=myapi
